backend usuarios: elimine controllerv2, agregar nuevo UsuarioController, login, validaciones y config